# CarFactory

./: README.md  stdin3.txt
SockoKamila-etap1/: CMakeLists.txt  Car.cpp  Car.h  Factory.cpp  Factory.h  main.cpp  temat4.txt
SockoKamila-etap2/: Bike.h  CMakeLists.txt  Car.cpp  Car.h  Factory.cpp  Factory.h  MotorCycle.cpp  MotorCycle.h  MotorVehicle.cpp  MotorVehicle.h  Person.cpp  Person.h  Sprayer.h  Vehicle.cpp  Vehicle.h  main.cpp  stdin.txt  temat4.txt  usedVehicles.cpp  usedVehicles.h
SockoKamila-etap3/: Bike.cpp  Bike.h  CMakeLists.txt  Car.h  Factory.cpp  Factory.h  MotorCycle.h  MotorVehicle.cpp  MotorVehicle.h  Person.cpp  Person.h  Sprayer.cpp  Sprayer.h  Vehicle.cpp  Vehicle.h  helperForFail.h  main.cpp  temat4.txt  usedVehicles.cpp  usedVehicles.h
